--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
               </li>
               <li>
                 <a
-                  href="#"
+                  href="#contact"
                   class="block py-2 px-3 rounded hover:bg-gray-100 md:hover:bg-black md:border-0 md:hover:underline md:p-0"
                   >Contact</a
                 >
@@ -110,7 +110,11 @@
 
     <section id="about" class="py-16 bg-[#736665]">
       <div class="container mx-auto">
-        <h2 class="text-center text-4xl font-bold my-10">About Me</h2>
+        <h2
+          class="text-center text-4xl font-bold my-10 uppercase tracking-wide"
+        >
+          About Me
+        </h2>
         <div class="md:flex flex justify-center items-center">
           <div class="md:w-1/2 p-4">
             <h1 class="md:text-4xl text-2xl font-semibold mb-4">
@@ -122,6 +126,12 @@
               and backend technologies, creating robust, user-friendly websites.
               My passion for coding drives me to continuously learn and innovate
               in the evolving digital landscape.
+              <a
+                href="https://drive.google.com/file/d/1XaCgL0FtE-7yv5q2iXzF-1hqfZD97dVj/view?usp=sharing"
+                class="font-semibold underline"
+                target="_blank"
+                >Click to view Resume</a
+              >
             </p>
           </div>
           <div class="md:w-1/4 w-auto text-center">
@@ -138,7 +148,9 @@
     <!-- Educational Background -->
     <section id="school" class="py-16 bg-[#A79680]">
       <div class="container mx-auto">
-        <h2 class="text-center text-4xl font-bold my-10">
+        <h2
+          class="text-center text-4xl font-bold my-10 uppercase tracking-wide"
+        >
           Educational Background
         </h2>
         <div
@@ -183,7 +195,11 @@
     <!-- Skills -->
     <section id="skills" class="py-16 bg-[#736665]">
       <div class="container mx-auto">
-        <h2 class="text-center text-4xl font-bold my-10">Skills</h2>
+        <h2
+          class="text-center text-4xl font-bold my-10 uppercase tracking-wide"
+        >
+          Skills
+        </h2>
         <div
           class="grid grid-cols-2 md:grid-cols-4 gap-y-20 text-center text-2xl"
         >
@@ -227,13 +243,18 @@
 
     <section id="projects" class="py-16 bg-[#A79680]">
       <div class="container mx-auto">
-        <h2 class="text-center text-4xl font-bold my-10">Top Projects</h2>
+        <h2
+          class="text-center text-4xl font-bold my-10 uppercase tracking-wide"
+        >
+          Top Projects
+        </h2>
 
         <!-- Project 1 -->
         <div class="flex flex-col md:flex-row items-center mb-10">
           <div class="md:w-1/2 p-4">
             <h3 class="text-3xl font-semibold">
-              GameDev w/ CRUD Functionality
+              <i class="fa-solid fa-file-code mr-2"></i>GameDev: CRUD
+              Functionality
             </h3>
             <p class="text-lg">
               A game library website built with Laravel/PHP and Tailwind CSS
@@ -267,7 +288,9 @@
         <!-- Project 2 -->
         <div class="flex flex-col md:flex-row items-center mb-10">
           <div class="md:w-1/2 p-4">
-            <h3 class="text-3xl font-semibold">GameDev w/ Public API</h3>
+            <h3 class="text-3xl font-semibold">
+              <i class="fa-solid fa-file-code mr-2"></i>GameDev: Public API
+            </h3>
             <p class="text-lg">
               A game library website using React, Tailwind CSS, and JavaScript
               integrates the FREE-TO-GAME public API, enabling users to search
@@ -301,19 +324,25 @@
     </section>
 
     <!-- Footer -->
-    <footer class="bg-black text-white py-6">
+
+    <footer id="contact" class="bg-black text-white py-6">
+      <div class="flex justify-center space-x-9 mb-5">
+        <a href="https://github.com/jianjio" target="_blank"
+          ><i class="fab fa-github text-4xl"></i
+        ></a>
+        <a href="https://www.facebook.com/brokodokasd" target="_blank"
+          ><i class="fab fa-facebook text-4xl"></i
+        ></a>
+        <a href="https://www.instagram.com/jiotiotangco/" target="_blank"
+          ><i class="fab fa-instagram text-4xl"></i
+        ></a>
+        <a
+          href="https://www.linkedin.com/in/jiancarlo-tiotangco-45868b338"
+          target="_blank"
+          ><i class="fa-brands fa-linkedin text-4xl"></i
+        ></a>
+      </div>
       <div class="container mx-auto text-center">
-        <div class="flex justify-center space-x-4 mb-3">
-          <a href="https://github.com/jianjio" target="_blank"
-            ><i class="fab fa-github text-2xl"></i
-          ></a>
-          <a href="https://www.facebook.com/brokodokasd" target="_blank"
-            ><i class="fab fa-facebook text-2xl"></i
-          ></a>
-          <a href="https://www.instagram.com/jiotiotangco/" target="_blank"
-            ><i class="fab fa-instagram text-2xl"></i
-          ></a>
-        </div>
         <p>
           &copy; 2024 | All Rights Reserved | Created by Jiancarlo Tiotangco
         </p>
